fixing the z-index of the modal window

--- a/css/main.css
+++ b/css/main.css
@@ -905,7 +905,7 @@ html, body {
 .modal {
   display: none;
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   left: 0;
   top: 0;
   width: 100%;
